--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ Flask-Mail==0.9.1
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==0.14.3
 greenlet==1.1.0
+gunicorn==20.1.0
 idna==3.1
 isort==5.7.0
 itsdangerous==2.0.0
