--- a/requirements.txt
+++ b/requirements.txt
@@ -24,8 +24,10 @@ MarkupSafe==2.0.0
 mccabe==0.6.1
 numpy==1.19.4
 Pillow==8.2.0
+psycopg2==2.8.6
 pycparser==2.20
 pylint==2.6.0
+python-dotenv==0.17.1
 python-speech-features==0.6
 six==1.15.0
 SQLAlchemy==1.4.15
