--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.9.4
 astroid==2.4.2
 bcrypt==3.2.0
 blinker==1.4
@@ -11,6 +12,7 @@ Flask-Admin==1.5.8
 Flask-Bcrypt==0.7.1
 Flask-Login==0.5.0
 Flask-Mail==0.9.1
+Flask-Migrate==4.0.4
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==0.14.3
 greenlet==2.0.2
@@ -20,11 +22,13 @@ isort==5.7.0
 itsdangerous==2.0.0
 Jinja2==3.0.0
 lazy-object-proxy==1.4.3
+Mako==1.2.4
 MarkupSafe==2.0.0
 mccabe==0.6.1
 numpy==1.24.2
-Pillow==9.4.0
+Pillow==9.2.0
 psycopg2==2.9.5
+psycopg2-binary==2.9.5
 pycparser==2.20
 pylint==2.6.0
 python-dotenv==0.17.1
